Refactor AlimentService for transaction management and stream usage